--- a/public/app/lodgin/src/html/lodginDetails.html
+++ b/public/app/lodgin/src/html/lodginDetails.html
@@ -60,30 +60,30 @@
 
 
     <div ng-repeat="item in lodgin.calificarApplications">
-      <div ng-if="(user.username!=lodgin.user.username && user && today>lodgin.fechaFin && item.owner.username==user.username)">
+      <div ng-if="(user.username!=lodgin.user.username && user && item.owner.username==user.username)">
         <!-- PUNTUAR PPUBLICACION -->
         <div ng-if="(!item.calificoPublicacion)">
-          <p>Califica la publicacion</p>
+          <p>Califica la publicacion (del 1 al 10)</p>
           <md-input-container>
             <label>Puntuacion Publicacion</label>
-            <input type="number" ng-model="lodgin.puntuacionPublicacion" ng-min="1" ng-max="5" ng-required="true" name="puntuacionPublicacion" >
+            <input type="number" ng-model="lodgin.puntuacionPublicacion" ng-min="1" ng-max="10" ng-required="true" name="puntuacionPublicacion" >
           </md-input-container>
           <md-button ng-click=calificarPublicacion($index) ng-disabled=!lodgin.puntuacionPublicacion> Calificar hospedaje</md-button>
         </div>
 
         <!--PUNTUAR HOSPEDADOR -->
         <div ng-if="(!item.calificoHospedador)">
-          <p>Califica al hospedador</p>
+          <p>Califica al hospedador (del 1 al 10)</p>
           <md-input-container>
             <label>Puntuacion hospedador</label>
-            <input type="number" ng-model="lodgin.puntuacionHospedador" ng-min="1" ng-max="5" ng-required="true" name="puntuacionHospedador" >
+            <input type="number" ng-model="lodgin.puntuacionHospedador" ng-min="1" ng-max="10" ng-required="true" name="puntuacionHospedador" >
           </md-input-container>
           <md-button ng-click=calificarHospedador($index) ng-disabled=!lodgin.puntuacionHospedador> Calificar hospedador</md-button>
         </div>
       </div>
     </div>
 
-    <div ng-show="(user.username==lodgin.user.username && user && today>lodgin.fechaFin && !item.calificoHuesped && lodgin.calificarApplications.length > 0)">
+    <div ng-show="(user.username==lodgin.user.username && user && !item.calificoHuesped && lodgin.calificarApplications.length > 0)">
       <md-list>
         <md-list-item class="md-2-line application" ng-repeat="item in lodgin.calificarApplications">
 
@@ -96,10 +96,10 @@
 
           <!--PUNTUAR HUESPED -->
           <div ng-if="(!item.calificoHuesped)">
-            <p>Califica al huesped</p>
+            <p>Califica al huesped (del 1 al 10)</p>
               <md-input-container>
                 <label>Puntuacion huesped</label>
-                <input type="number" ng-model="lodgin.puntuacionHuesped" ng-min="1" ng-max="5" ng-required="true" name="puntuacionHospedador" >
+                <input type="number" ng-model="lodgin.puntuacionHuesped" ng-min="1" ng-max="10" ng-required="true" name="puntuacionHospedador" >
               </md-input-container>
               <md-button ng-click=calificarHuesped($index) ng-disabled=!lodgin.puntuacionHuesped> Calificar huesped</md-button>
           </div>
