--- a/public/app/mis-solicitudes/src/html/mis-solicitudes.html
+++ b/public/app/mis-solicitudes/src/html/mis-solicitudes.html
@@ -11,6 +11,9 @@
       <p id="fechaIni">{{application.fechaInicio | date : shortDate}}</p>
       <label for="fechaFin">Fecha de Check OUT:</label>
       <p id="fechaFin">{{application.fechaFin | date : shortDate}}</p>
+      <div ng-if="application.status=='pendiente'">
+        <p><md-button ng-click="modificar($index)"> Modificar </md-button></p>
+      </div>
     </div>
   </md-list-item>
 </md-list>
