--- a/public/app/donation/src/html/accredit.html
+++ b/public/app/donation/src/html/accredit.html
@@ -1,9 +1,9 @@
-<div class="panel panel-success">
-  <div class="heading">Su Donacion fue exitosa</div>
+<couchinn-header buttons="headerButtons"></couchinn-header>
+<div class="panel panel-success"><br>
+  <div class="heading">Su Donacion fue exitosa</div><br>
   <div class="content">
+    <p>Muchas gracias por colaborar con nosotros.</p><br>
     <p>Desde ahora todas sus publicaciones seran destacadas.</p><br>
     <p>El estado de premium no tiene vencimiento.</p><br>
-    <p>Muchas gracias por colaborar con nosotros.</p><br>
-    <md-button ng-click="volver()"> Volver </md-button>
   </div>
 </div>
