--- a/public/app/donation/src/html/ganancia.html
+++ b/public/app/donation/src/html/ganancia.html
@@ -1,7 +1,26 @@
 <couchinn-header buttons="headerButtons"></couchinn-header>
-<div class="heading">Lista de Donaciones del Usuario</div>
+<div class="heading">Ganancia entre fechas</div>
 <td>{{ user2.premium }}</td>
 <div class="container">
+  <div>
+    <md-content>
+      <md-datepicker
+        ng-model="donation.fechaInicio"
+        md-placeholder="fecha inicial"
+        md-max-date="today">
+      </md-datepicker>
+    </md-content>
+
+    <md-content>
+      <md-datepicker
+        ng-model="donation.fechaFin"
+        md-placeholder="fecha final"
+        md-min-date="donation.fechaInicio"
+        md-max-date="today">
+      </md-datepicker>
+    </md-content>
+  </div>
+  <md-button ng-click="ObtenerGanancia()"> Obtener Ganancia</md-button>
     <div class="col-sm-6 col-sm-offset-1 text-center">
       <table class="table table-striped">
         <tr class="info">
@@ -22,4 +41,3 @@
     </div>
   </div>
 </div>
-
