--- a/public/app/buscar/src/html/resultados.html
+++ b/public/app/buscar/src/html/resultados.html
@@ -1,13 +1,13 @@
 <couchinn-header buttons="headerButtons"></couchinn-header>
 
 
-<table class="table table-striped">
+<!--<table class="table table-striped">
   <tr class="info">
     <td>Nombre</td>
     <td>Tipo</td>
     <td>Capacidad Máxima</td>
-    <td>FechaInicio</td>
-    <td>FechaFin</td>
+    <td>Fecha Inicio</td>
+    <td>Fecha Fin</td>
   </tr>
 </table>
 <table>
@@ -21,9 +21,45 @@
       </publicacion>
     </div>
   </div>
+</table>-->
 
 
-</table>
+
+<!-- exact table from live demo -->
+<md-table-container>
+  <table md-table md-row-select ng-model="selected">
+    <thead md-head md-order="query.order">
+    <tr md-row>
+      <th md-column md-order-by="nameToLower"><span>Nombre</span></th>
+      <th md-column md-numeric md-order-by="calories.value"><span>Tipo</span></th>
+      <th md-column md-numeric>Capacidad Máxima</th>
+      <th md-column md-numeric>Fecha Inicio</th>
+      <th md-column md-numeric>Fecha Fin</th>
+    </tr>
+    </thead>
+    <tbody md-body>
+    <tr md-row
+
+        class="publicacion-fila"
+        ng-class="{'premium': data.user.premium}"
+
+        ng-repeat="publicacion in publicaciones track by $index"
+        ng-click="detalle($index)"
+    >
+
+      <td md-cell
+
+      >{{ publicacion.nombre }}</td>
+      <td md-cell>{{ publicacion.tipo.nombre }} </td>
+      <td md-cell>{{ publicacion.capacidadMax }}</td>
+      <td md-cell>{{ publicacion.fechaInicio | date : shortDate}}</td>
+      <td md-cell>{{ publicacion.fechaFin | date : shortDate}} </td>
+
+    </tr>
+    </tbody>
+  </table>
+</md-table-container>
+
 
 
 
