--- a/public/app/lodgin/src/html/lodginDetails.html
+++ b/public/app/lodgin/src/html/lodginDetails.html
@@ -1,14 +1,11 @@
 <couchinn-header buttons="headerButtons"></couchinn-header>
 <div class="heading">Deatalles de la publicacion</div>
 <div class="container">
-  <div ng-init = "lodgin.puntuacion = calcularPromedio(lodgin.puntuacion)"></div>
-  <div ng-init = "lodgin.user.puntuacionHospedador = calcularPromedio(lodgin.user.puntuacionHospedador)"></div>
-  <!--<div ng-init="preguntas = damePreguntas()"></div>-->
   <div class wrap style="padding-left:70px;padding-right:70px;">
     <ul style="list-style-type:none">
       <div layout-gt-sm="row">
         <li><b>Nombre : </b> {{ lodgin.nombre }}</li>
-        <li><b>Puntuacion publicacion : </b> {{ lodgin.puntuacion }} </li>
+        <li><b>Puntuacion publicacion : </b> {{ calcularPromedio(lodgin.puntuacion) }} </li>
       </div>
       <li><b>Descripcion : </b> {{ lodgin.descripcion }}</li>
       <div layout-gt-sm="row">
@@ -28,7 +25,7 @@
       </div>
       <div layout-gt-sm="row">
         <li><b>Dueño : </b>{{ lodgin.user.email }}</li>
-        <li><b>Puntuacion hospedador : </b>{{ lodgin.user.puntuacionHospedador }}</li>
+        <li><b>Puntuacion hospedador : </b>{{ calcularPromedio(lodgin.user.puntuacionHospedador) }}</li>
       </div>
       <div layout-gt-sm="row">
         <li><b>Activa : </b>{{ lodgin.activa }}</li>
@@ -61,18 +58,53 @@
       <md-button ng-click="preguntar($index)"> Preguntar</md-button>
     </div>
 
-    <!--   <div ng-if="((user.username==lodgin.user.username) && (!pregunta.respuesta))">
-         <md-input-container class="md-block" flex-gt-sm>
-           <label>Responder</label>
-           <input ng-model="preguntas.respuesta">
-         </md-input-container>
-         <md-button ng-click="responder(preguntas.respuesta)" ng-disabled="!preguntas.respuesta"> Responder</md-button>
-       </div>-->
 
+    <div ng-if="(user.username!=lodgin.user.username && user && today>lodgin.fechaFin && item.calificoHospedador && item.calificoPublicacion)">
+      <div ng-if="(item.calificoPublicacion)">
+        <!-- PUNTUAR PPUBLICACION -->
+        <md-input-container>
+          <label>Puntuacion Publicacion</label>
+          <input type="number" ng-model="lodgin.puntuacionPublicacion" ng-min="1" ng-max="5" ng-required="true" name="puntuacionPublicacion" >
+        </md-input-container>
+        <md-button ng-click=calificarPublicacion($index) ng-disabled=!lodgin.puntuacionPublicacion> Calificar hospedaje</md-button>
+      </div>
 
+      <!--PUNTUAR HOSPEDADOR -->
+      <div ng-if="(item.calificoHospedador)">
+        <md-input-container>
+          <label>Puntuacion hospedador</label>
+          <input type="number" ng-model="lodgin.puntuacionHospedador" ng-min="1" ng-max="5" ng-required="true" name="puntuacionHospedador" >
+        </md-input-container>
+        <md-button ng-click=calificarHospedador($index) ng-disabled=!lodgin.puntuacionHospedador> Calificar hospedador</md-button>
+      </div>
+    </div>
 
+    <div ng-show="(user.username==lodgin.user.username && user && today>lodgin.fechaFin && !item.calificoHuesped && lodgin.calificarApplications.length > 0)">
+      <md-list>
+        <md-list-item class="md-2-line application" ng-repeat="item in lodgin.calificarApplications">
+
+          <div class="md-list-item-text">
+            <label>Solicitante</label>
+            <p>{{ item.owner.nombre }}</p>
+            <label>Puntuacion publicacion </label>
+            <p>{{ calcularPromedio(item.owner.puntuacionHuesped) }}</p>
+          </div>
+
+          <!--PUNTUAR HUESPED -->
+          <div ng-if="(user.username==lodgin.user.username && user && today>lodgin.fechaFin && !item.calificoHuesped)">
+            <div>
+              <md-input-container>
+                <label>Puntuacion huesped</label>
+                <input type="number" ng-model="lodgin.puntuacionHuesped" ng-min="1" ng-max="5" ng-required="true" name="puntuacionHospedador" >
+              </md-input-container>
+              <md-button ng-click=calificarHuesped($index) ng-disabled=!lodgin.puntuacionHuesped> Calificar huesped</md-button>
+            </div>
+          </div>
+
+        </md-list-item>
+      </md-list>
+    </div>
   </div>
-</div>
 
 <div ng-if="notMyCouch">
   <h1>Solicitar Couch</h1>
@@ -125,7 +157,9 @@
 
         <div class="md-list-item-text">
           <label>Solicitante</label>
-          <p>{{item.owner.nombre}}</p>
+          <p>{{ item.owner.nombre }}</p>
+          <label>Puntuacion publicacion </label>
+          <p>{{ calcularPromedio(item.owner.puntuacionHuesped) }}</p>
           <label>Estado</label>
           <p>{{item.status}}</p>
           <label>fechas solicitadas</label>
